--- a/Project JS2/package.json
+++ b/Project JS2/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "node-static": "^0.7.11"
   }
 }
